<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="account_type">com.ticktee.android</string>
    <string name="app_name">TickTee for Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Sign In</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_message">Welcome to TickTee</string>
    <string name="login_notice">Please log in to track your progress</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="menu_logout">Sign out</string>
    <string name="projects_summary">Project Summary</string>
    <string name="total_projects">Total:</string>
    <string name="in_progress">In Progress</string>
    <string name="overdue">Overdue</string>
    <string name="complete">Complete</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_project_list">Projects</string>
    <string name="title_project_detail">Project Detail</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Starting your journey after log in</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="expected_progress">Expected Progress</string>
    <string name="current_progress">Current Progress</string>
    <string name="created_at">Created At</string>
    <string name="last_update_at">Last Update At</string>
    <string name="description">Description</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_summ">pref_sync_summ</string>
    <string name="pref_syncConnectionType">pref_syncConnectionType</string>
    <string name="pref_syncConnectionTypes_default">pref_sdf_defa</string>
    <string name="song_error_title">song error title</string>
    <string name="song_remote_delete">song remot delete</string>
    <string name="no_record_found">No Record ccc Found!</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="name">Name</string>
    <string name="discard">Discard</string>
    <string name="done">Done</string>
    <string name="title_project_edit">Edit</string>
    <string name="change_saved">Changes Saved</string>
    <string name="change_discard">Changes Discarded</string>
    <string name="save_failure">Fail to save changes</string>
    <string name="remove">Remove</string>
    <string name="progress_saved">Progress Saved</string>
    <string name="title_activity_project_new">New Project</string>
    <string name="project_added">Project Added.</string>
    <string name="invalid_input">Input Invalid</string>
    <string name="project_added_fail">Fail to add project</string>
    <string name="progress_removed">Project Removed.</string>
    <string name="confirm_delete_project">Continue to remove this project?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown</string>
    <string name="new_progress">New Progress</string>
    <string name="start_end">Use Start and End Date</string>
    <string name="target">Target Aim</string>
    <string name="unit">Unit</string>
    <string name="alertType">Alert</string>
    <string name="init_progress">Initial Progress</string>
    <string name="others">Others</string>
    <string name="consumed">Is Consumed</string>
    <string name="decimalUnit">Is Decimal Unit</string>
    <string name="emptyName">Name cannot be empty.</string>
    <string name="emptyTarget">Target cannot be empty.</string>
    <string name="no_time_limit">No Time Limit</string>
    <string name="emptyUnit">Unit cannot be empty.</string>
    <string name="title_activity_project_sharing">Sharing your progress</string>
    <string name="sharing_with">Sharing with</string>
    <string name="title_activity_notify_activity_dialog">NotifyActivityDialog</string>
    <string name="schedule">Schedule</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="title_activity_project_calendar_view">ProjectCalendarView</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
